5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1592_2426.log
== SUBMITION (2019-03-25 15:11:59) 
-- CODE:
v= float(input(4)
f= float(input(60)
d=v*t
q=d/12
print(d)
print(q)
-- EXECUTION TIME:
0.194262
-- ERROR:
  File "/home/codebench/codes/1592/2426/main.py", line 2
    f= float(input(60)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:12:12) 
-- CODE:
v= float(input())
f= float(input())
d=v*t
q=d/12
print(d)
print(q)
-- EXECUTION TIME:
0.227224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/2426/main.py", line 3, in <module>
    d=v*t
NameError: name 't' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:12:26) 
-- CODE:
v= float(input())
f= float(input())
d= v*f
q= d/12
print(d)
print(q)
-- EXECUTION TIME:
0.19274
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
